# gray-scott-sim-G18

./: CMakeLists.txt  Makefile  README.md  checks.cpp  checks.h  gs.cpp  gs.h
.github/workflows/: build.yaml
